--- a/documentation/index.html
+++ b/documentation/index.html
@@ -121,20 +121,18 @@
 
             <section class="container mt-5" id="key-features">
               <h1 class="">Introduction</h1>
-              <p class="">Are you ready to revolutionize the way you approach content generation, code
-                development, and
-                translation services? WizAI, a cutting-edge Software as a Service (SaaS) platform, is here to
-                change the game. With
-                five years of experience in professional content writing, we have harnessed the power of
+              <p class="">Introducing WizAI: Your Cutting-Edge AI-Powered SaaS Platform
+                Experience the future of content creation, code development, and translation services with WizAI, our
+                innovative
+                Software as a Service (SaaS) platform. WizAI is your solution for harnessing the incredible potential of
                 artificial
-                intelligence to
-                bring you a one-of-a-kind solution. WizAI is designed to make your life easier by offering
-                unparalleled
-                features
-                that include AI code generation, AI content writing, AI translation, AI prompt image
-                generation, and
-                even AI code
-                generation using the OpenAI API.</p>
+                intelligence to meet the demands of today's digital world. WizAI is your all-in-one solution for AI code
+                generation, AI
+                content writing, AI translation, AI prompt image generation, and it even integrates with the OpenAI API
+                for enhanced
+                code generation. Simplify your work, save time, and unlock your full creative potential with WizAI.
+                Explore the future
+                of AI-powered innovation today!</p>
 
               <h2 class="mt-4">Key Features:</h2>
               <div class="row">
