--- a/documentation/index.html
+++ b/documentation/index.html
@@ -117,10 +117,19 @@
                 email via
                 <a target="_blank" href="https://support.itech-theme.com/">Item Support Page</a>.
               </p>
+
             </section>
 
             <section class="container mt-5" id="key-features">
+
               <h1 class="">Introduction</h1>
+              <p class="alert alert-info">
+                Please note: To fully unlock the capabilities of WizAI, you'll need to purchase OpenAI API credits. This
+                will enable
+                seamless integration with OpenAI's powerful AI models, taking your content creation and code generation
+                to the next
+                level.
+              </p>
               <p class="">Introducing WizAI: Your Cutting-Edge AI-Powered SaaS Platform
                 Experience the future of content creation, code development, and translation services with WizAI, our
                 innovative
@@ -133,6 +142,7 @@
                 code generation. Simplify your work, save time, and unlock your full creative potential with WizAI.
                 Explore the future
                 of AI-powered innovation today!</p>
+
 
               <h2 class="mt-4">Key Features:</h2>
               <div class="row">
@@ -509,41 +519,40 @@
               <h2>Settings</h2>
               <h4>Add Email Smtp settings</h4>
               <img src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-smtp-2023-10-13-17_03_50.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add General Settings for all basic website settings</h4>
               <img src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-general-2023-10-13-17_14_30.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add Open ai settings data</h4>
               <img src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-open-ai-2023-10-13-17_47_30.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add Privacy Policy And Terms Service</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-privacy-policy-and-terms-2023-10-13-17_50_02.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
 
               <h4>Add Payment Credentials</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-payment-credentials-2023-10-13-17_51_33.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add Auth Credentials</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-settings-auth-credentials-2023-10-13-17_59_04.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add Landing Page Settings</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-site-settings-landing-page-2023-10-13-18_00_28.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Add pricing packages from here</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-payments-packages-create-2023-10-13-18_01_56.png"
-                width="800" alt="WizAI" />
-              <h4>Add Faq section from here</h4>
+                width="800" alt="WizAI" 1280 <h4>Add Faq section from here</h4>
               <img src="assets/images/screencapture-wizai-tradexpro-org-admin-faqs-create-2023-10-13-18_10_16.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
               <h4>Create custom template from here</h4>
               <img
                 src="assets/images/screencapture-wizai-tradexpro-org-admin-templates-custom-templates-create-2023-10-13-18_11_43.png"
-                width="800" alt="WizAI" />
+                width="1280" alt="WizAI" />
 
 
 
